# poetryproud

./: .gitignore  Makefile  README.md  pyproject.toml
poetryproud/: haiku.py  regular.py
tests/: test_all.py
