[tool.poetry]
name = "poetryproud"
version = "0.1.0"
description = "Outputs more than just haikus"
authors = ["hirsch-b <benjamin.hirschfield@dolead.com>"]
readme = "README.md"
license = "MIT"
classifiers = [
          "Programming Language :: Python :: 3",
          "License :: OSI Approved :: MIT License"]
keywords = [ "haiku", "free verse", "sonnet" ]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-cov = "^2.11.1"
pycodestyle = "^2.7.0"
mypy = "^0.812"
coverage = "^5.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
